# Write-Powerful-Rust-Macros

./: .gitignore  README.md
ch02/: Cargo.toml
ch02/compose/: Cargo.toml
ch02/compose/src/: main.rs
ch02/dsl/: Cargo.toml
ch02/dsl/src/: main.rs
ch02/greeting/src/: greeting.rs  main.rs
ch02/my-vec/: Cargo.toml
ch02/my-vec/src/: main.rs
ch02/trace-macros/: Cargo.toml
ch02/trace-macros/src/: greeting.rs  main.rs
ch03/: Cargo.toml
ch03/hello-world/: Cargo.toml
ch03/hello-world/hello-world-macro/: Cargo.toml
ch03/hello-world/src/: main.rs
ch04/: Cargo.toml
ch04/exercise/: Cargo.toml
ch04/exercise/make-public-macro/: Cargo.toml
ch04/exercise/src/: main.rs
ch04/make-public/: Cargo.toml
ch04/make-public-using-parse/: Cargo.toml
ch04/make-public-using-parse/make-public-macro/: Cargo.toml
ch04/make-public-using-parse/src/: main.rs
ch04/make-public-with-struct-field/: Cargo.toml
ch04/make-public-with-struct-field/make-public-macro/: Cargo.toml
ch04/make-public/src/: main.rs
ch05/: Cargo.toml
ch05/compose/: Cargo.toml
ch05/information-hiding/: Cargo.toml
ch06/builder/: Cargo.toml
ch07/panic-to-result/: Cargo.toml
ch08/builder-with-attribute/: Cargo.toml
ch08/other-attributes/: Cargo.toml
ch09/iac-another-alternative/: Cargo.toml
ch09/iac-with-sdk-calls/iac-macro/: Cargo.toml
ch09/iac-with-sdk-calls/iac-macro/src/: errors.rs  input.rs  lambda.rs  lib.rs  s3.rs
ch10/yaml-config/: Cargo.toml
ch10/yaml-config/config-macro/: Cargo.toml
ch10/yaml-config/config-macro/src/: input.rs  lib.rs  output.rs  struct_output.rs
(+73 files in other folders)
