[package]
name = "config-macro"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = "1.0.228"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", features = ["extra-traits"] }

[lib]
proc-macro = true

[features]
default = ["functional"]
struct = []
functional = []
