[package]
name = "config-macro"
version = "0.1.0"
edition = "2024"
description = "Macros for using config as a struct within your application"
license = "MIT"
homepage = "https://github.com/some-page"
repository = "https://github.com/some-page"
readme = "README.md"
keywords = ["configuration", "macro", "yaml"]

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = "1.0.228"
serde_yaml = "0.9.34"
syn = { version = "2.0.117", features = ["extra-traits"] }

[lib]
proc-macro = true

[features]
default = ["functional"]
struct = []
functional = []
